k8s-manifests/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartpg-prod
  labels:
    environment: production
